syntax = "proto3";

package feedback_fusion_event_v1;

import "google/protobuf/empty.proto";
import "google/protobuf/timestamp.proto";

service FeedbackFusionIndexerV1 {
  rpc SendBatch(EventBatch) returns (google.protobuf.Empty);
}

message EventBatch {
  repeated Event events = 1;
}

message Event {
  google.protobuf.Timestamp created_at = 1;

  oneof event {
    ResourceModifiedEvent resource_modified_event = 2;
  }
}

enum ResourceModificationOperation {
  CREATE = 0;
  UPDATE = 1;
  DELETE = 2;
}

enum ResourceKind {
  TARGET = 0;
  PROMPT = 1;
  FIELD = 2;
  AUTHORIZATION = 3;
}

message ResourceModifiedEvent {
  ResourceModificationOperation operation = 1;
  string id = 2;
  bytes data = 3;
}
